menu overlap fixed

--- a/week3/1-website/style.css
+++ b/week3/1-website/style.css
@@ -60,6 +60,7 @@ main {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  z-index: -1;
 }
 .main_image {
   display: flex;
